# ZLS3

./: CMakeLists.txt  Makefile  README.md
cmd/minis3_server/: main.cpp
configs/: server.example.yaml  server.local.yaml  server.yaml
docker/: Dockerfile  docker-compose.yaml  server.yaml
docs/: api.md  ops.md
scripts/: bench_download.sh  bench_upload.sh  gen_test_file.sh  install_deps.sh  mysql_init.sql  quickstart.sh  test_api.sh  test_multipart.sh
src/api/handlers/: bucket_handlers.cpp  bucket_handlers.h  health_handlers.cpp  health_handlers.h  multipart_handlers.cpp  multipart_handlers.h  object_handlers.cpp  object_handlers.h  presign_handlers.cpp  presign_handlers.h
src/api/middleware/: auth_middleware.cpp  auth_middleware.h  trace_middleware.cpp  trace_middleware.h
src/db/: meta_store.cpp  meta_store.h  mysql_pool.cpp  mysql_pool.h  mysql_tx.cpp  mysql_tx.h
src/net/buffer/: byte_buffer.cpp  byte_buffer.h
src/net/epoll/: acceptor.cpp  acceptor.h  channel.cpp  channel.h  event_loop.cpp  event_loop.h  notifier.cpp  notifier.h  timer_wheel.cpp  timer_wheel.h
src/net/http/: http_connection.cpp  http_connection.h  http_parser.cpp  http_parser.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_router.cpp  http_router.h
src/server/: server.cpp  server.h
src/service/: auth_service.cpp  auth_service.h  bucket_service.cpp  bucket_service.h  multipart_service.cpp  multipart_service.h  object_service.cpp  object_service.h  presign_service.cpp  presign_service.h
src/storage/: cas_layout.cpp  cas_layout.h  data_store.cpp  data_store.h  gc.cpp  gc.h
src/util/: config.cpp  config.h  crypto.cpp  crypto.h  fs.cpp  fs.h  logging.cpp  logging.h  metrics.cpp  metrics.h  status.cpp  status.h  uuid.cpp  uuid.h
tests/: CMakeLists.txt
tests/integration/: test_data_store.cpp  test_meta_store.cpp
tests/unit/: test_byte_buffer.cpp  test_cas_layout.cpp  test_crypto.cpp  test_http_parser.cpp  test_status.cpp  test_uuid.cpp
